--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-ga4": "^2.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
